--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harbour | Setup your base in the UAE</title>
+    <title>Harbour | Hackathon</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -138,4 +138,5 @@
     </footer>
 
 </body>
+
 </html>
